2005-06-20  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : fix const foo * const * fields/params.
	[Fixes #75266]

2005-06-17  Mike Kestner  <mkestner@novell.com>

	* Makefile.include : add included apis as deps on the generation
	target to force regen if dependency lib api changes.
	* pango/Analysis.custom : new custom to implement the ExtraAttrs
	property.  [Fixes #74668]
	* pango/Makefile.am : add new custom file.

2005-06-17  Mike Kestner  <mkestner@novell.com>

	* bootstrap : use assembly version 2.6.0.0.
	* bootstrap-2.4 : use assembly version 2.4.0.0.
	* configure.in.in : substitute the assembly version.

2005-06-14  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : add nodes for all the *Set props on TextTag.
	[Fixes #75219]

2005-06-10  Dan Winship  <danw@novell.com>

	* parser/gapi2xml.pl (addPropElem): Distinguish CONSTRUCT ("must
	be set at construct time") and CONSTRUCT_ONLY ("can only be set at
	construct time") properties, rather than marking them all
	"construct-only".

	* gnome/gnome-api.raw: 
	* gtk/gtk-api-2.4.raw: 
	* gtk/gtk-api-2.6.raw: Regen, causing a few formerly-read-only
	properties to become writable.

2005-06-10  Mike Kestner  <mkestner@novell.com>

	* glade/XML.custom : add a try block on field autoconnect to make it
	easier to catch type mismatches and such.  Suggestion from Gonzalito.

2005-06-09  Lluis Sanchez  <lluis@novell.com>

	* glib/Marshaller.cs: Added null check in FilenamePtrToString.

2005-06-08  Mike Kestner  <mkestner@novell.com>

	* generator/SimpleBase.cs : off-by-one in namespace join.
	* glib/ListBase.cs : support IntPtr element_type.
	* gnomevfs/FileInfo.cs : make it ManualGen friendly.
	* gnomevfs/*.cs : rework for FileInfo api changes.
	* gnomevfs/Gnomevfs.metadata : make FileInfo a manual symbol.
	* gnomevfs/Uri.custom : rework for FileInfo api changes.
	* gnome/Makefile.am : add gnomevfs dependency to pick up some more api
	symbols.
	* gnome/gnome-sharp-2.0.pc.in : advertise the vfs dep.