@@ -1,3 +1,9 @@
+2005-06-21  Mike Kestner  <mkestner@novell.com>
+
+	* generator/ConstStringGen.cs : override ToNativeReturn ().
+	* generator/ClassBase.cs : use fully qualified interface names for
+	conflicting implementations.
+
 2005-06-20  Mike Kestner  <mkestner@novell.com>
 
 	* parser/gapi2xml.pl : fix const foo * const * fields/params.
